--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<hi> Edric <hi>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My brief profile</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header class="main-header">
+        <img src="images/profile.jpg" alt="我的头像" class="profile-pic">
+        <h1 class="name">Edric</h1>
+        <p class="bio">Facing some crazy parts, Keep heart clean and clear.</p>
+    </header>
+
+    <main class="container">
+        
+        <section class="card">
+            <h2><i class="icon-idea"></i> Some word</h2>
+            <p>Lucky to Meet you.</p>
+        </section>
+
+        <section class="card">
+            <h2><i class="icon-edu"></i> Education Background</h2>
+            <div class="item">
+                <h3>Xidian University</h3>
+                <p>Software Engineering | 2021 - 2025</p>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2><i class="icon-work"></i> Work Experenice</h2>
+            <div class="item">
+                <h3>HSBC</h3>
+                <p>On Boarding | 2025</p>
+                <ul>
+                    <li>IWPB</li>
+                    <li>CCO (Chief Commercial office)</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2><i class="icon-hobby"></i> My Hobbies</h2>
+            <ul class="hobby-list">
+                <li>Social</li>
+                <li>Cooking</li>
+                <li>Photography</li>
+                <li>Music</li>
+                <li>Traveling</li>
+                <li>Gym</li>
+                <li>Singing</li>
+            </ul>
+        </section>
+
+    </main>
+
+    <footer class="main-footer">
+        <p>Wechat: EmbraceWorldBeauty ; Email: yangLi@163.com</p>
+        <p>&copy; 2025 yangLi. All Rights Reserved.</p>
+    </footer>
+
+</body>
+</html>
